Add new information, files and complete the entry
Add new information, files and complete the entry

--- a/_config.yml
+++ b/_config.yml
@@ -12,3 +12,7 @@ github_username:  alvarotolentino
 markdown: kramdown
 permalink: none
 gems: ['jekyll-twitter-plugin']
+
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
